[gd_scene load_steps=24 format=3 uid="uid://ro5l25gmnmgr"]

[ext_resource type="Script" uid="uid://dmd5b0jkwxljv" path="res://rooms/room_1.gd" id="1_xesc5"]
[ext_resource type="Material" uid="uid://g8tvlyrsl57n" path="res://upper_floor_present.tres" id="2_kcogv"]
[ext_resource type="Material" uid="uid://dte15qjjirtvh" path="res://wood_panels.tres" id="2_pjcsh"]
[ext_resource type="PackedScene" uid="uid://biniydtbfpr77" path="res://camera/camera_3d.tscn" id="2_vrp60"]

[sub_resource type="BoxMesh" id="BoxMesh_s102h"]
material = ExtResource("2_kcogv")
size = Vector3(7, 0.2, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pjcsh"]

[sub_resource type="BoxMesh" id="BoxMesh_xesc5"]
material = SubResource("StandardMaterial3D_pjcsh")
size = Vector3(7.4, 0.2, 0.85)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kcogv"]

[sub_resource type="BoxMesh" id="BoxMesh_2otyv"]
material = SubResource("StandardMaterial3D_kcogv")
size = Vector3(4, 0.2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_av4tb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rvbd7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cb0tb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q22xw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4mh32"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_65nw2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2otyv"]
size = Vector3(2, 2, 1.6)

[sub_resource type="BoxShape3D" id="BoxShape3D_olrdv"]
size = Vector3(4.4, 2, 3.6000001)

[sub_resource type="BoxShape3D" id="BoxShape3D_rnj2d"]
size = Vector3(1.1, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_dngkx"]
size = Vector3(1.1, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_m1sog"]
size = Vector3(1, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_kmcul"]
size = Vector3(1.1, 2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_dby1b"]
size = Vector3(1, 2, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_u7d2c"]
size = Vector3(1, 2, 7)

[node name="Room1" type="StaticBody3D"]
input_ray_pickable = false
script = ExtResource("1_xesc5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.1, 0.20000002)
mesh = SubResource("BoxMesh_s102h")

[node name="Roof" type="Node3D" parent="."]

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Roof"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 2.4, 0.25)
mesh = SubResource("BoxMesh_xesc5")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Roof"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, -1.1)
mesh = SubResource("BoxMesh_2otyv")
skeleton = NodePath("../..")

[node name="CSGBox3D14" type="CSGBox3D" parent="Roof"]
transform = Transform3D(-1, -2.1855694e-08, 8.156656e-08, 2.1855694e-08, 0.8660254, 0.5, -8.156656e-08, 0.5, -0.8660254, -0.049999803, 1.6500001, -2.5)
size = Vector3(4.3, 1.7, 0.2)
material = SubResource("StandardMaterial3D_av4tb")

[node name="CSGBox3D16" type="CSGBox3D" parent="Roof"]
transform = Transform3D(-1, -2.1855694e-08, 8.156656e-08, 2.1855694e-08, 0.8660254, 0.5, -8.156656e-08, 0.5, -0.8660254, 3.15, 1.6500001, -0.49999994)
size = Vector3(2.1000001, 1.7, 0.2)
material = SubResource("StandardMaterial3D_rvbd7")

[node name="CSGBox3D12" type="CSGBox3D" parent="Roof"]
transform = Transform3D(-1, -2.1855694e-08, 8.156656e-08, 2.1855694e-08, 0.8660254, 0.5, -8.156656e-08, 0.5, -0.8660254, -2.6499999, 1.6500001, -0.49999997)
size = Vector3(1.1, 1.7, 0.2)
material = SubResource("StandardMaterial3D_cb0tb")

[node name="CSGBox3D13" type="CSGBox3D" parent="Roof"]
transform = Transform3D(-3.7855173e-08, 0.5, -0.8660254, 2.1855694e-08, 0.8660254, 0.5, 1, 0, -4.371139e-08, -1.9999999, 1.6500001, -1.5)
size = Vector3(2, 1.7, 0.2)
material = SubResource("StandardMaterial3D_q22xw")

[node name="CSGBox3D15" type="CSGBox3D" parent="Roof"]
transform = Transform3D(-4.9567603e-08, -0.5, 0.8660254, 2.1855694e-08, 0.8660254, 0.5, -1, 4.371139e-08, -3.1998958e-08, 2, 1.6500001, -1.5)
size = Vector3(2, 1.7, 0.2)
material = SubResource("StandardMaterial3D_4mh32")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.45, 0.65, -0.5024303)
size = Vector3(1.1, 1.7, 0.2)
material = ExtResource("2_pjcsh")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, -2.5)
size = Vector3(4, 1.7, 0.2)
material = ExtResource("2_pjcsh")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="CSGCombiner3D/CSGBox3D4"]
operation = 2

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D/CSGBox3D4/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
size = Vector3(0.5, 0.75, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D/CSGBox3D4/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.25, 0)
size = Vector3(0.5, 0.75, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D/CSGBox3D4/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.25, 0)
size = Vector3(0.5, 0.75, 1)

[node name="MainSide" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 1)
size = Vector3(6, 1.7, 0.2)
material = ExtResource("2_pjcsh")

[node name="CSGBox3D17" type="CSGBox3D" parent="CSGCombiner3D/MainSide"]
transform = Transform3D(1, -2.1855694e-08, -5.856215e-09, 2.1855694e-08, 0.8660254, 0.5, -5.8562146e-09, -0.5, 0.8660254, 0.50000024, 1.0500001, 0)
size = Vector3(7.4, 1.7, 0.2)
material = SubResource("StandardMaterial3D_65nw2")

[node name="CSGBox3D8" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 3, 0.65, 0.19999999)
size = Vector3(1.4, 1.7, 0.2)

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="CSGCombiner3D/CSGBox3D8"]
operation = 2

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D/CSGBox3D8/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.100000024, 0)
size = Vector3(0.5, 1.2, 0.25)

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 2, 0.65, -1.5500001)
size = Vector3(2.1000001, 1.7, 0.2)
material = ExtResource("2_pjcsh")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -2, 0.65, -1.5500001)
size = Vector3(2.1000001, 1.7, 0.2)
material = ExtResource("2_pjcsh")

[node name="CSGBox3D7" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1920929e-07, 0.19999991, -0.55)
size = Vector3(3.8, 0.4, 0.1)
material = ExtResource("2_pjcsh")

[node name="OtherSide" type="Node3D" parent="CSGCombiner3D"]

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D/OtherSide"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0.65, -0.5)
material_override = ExtResource("2_pjcsh")
size = Vector3(1.2, 1.7, 0.2)

[node name="CSGBox3D7" type="CSGBox3D" parent="CSGCombiner3D/OtherSide"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -3, 1.05, 0.3)
size = Vector3(1.6, 2.5, 0.2)
material = ExtResource("2_pjcsh")

[node name="CSGBox3D9" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 4, 1.05, 0.3)
size = Vector3(1.6, 2.5, 0.2)
material = ExtResource("2_pjcsh")

[node name="CSGBox3D10" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 3.55, 0.65, -0.5)
size = Vector3(1.1, 1.7, 0.2)
material = ExtResource("2_pjcsh")

[node name="CSGBox3D11" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 3.5, 0.65, 1)
size = Vector3(1, 1.7, 0.2)
material = ExtResource("2_pjcsh")

[node name="MainMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 2)

[node name="OtherSideMarker" type="Marker3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -1, 0.5, -0.25)

[node name="Camera3D" parent="." node_paths=PackedStringArray("marker1", "marker2") instance=ExtResource("2_vrp60")]
current = false
marker1 = NodePath("../MainMarker")
marker2 = NodePath("../OtherSideMarker")

[node name="Stairs" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stairs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1159668, -0.5, 0.3)
shape = SubResource("BoxShape3D_2otyv")

[node name="Room" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0)
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3, -0.5, -0.6999999)
shape = SubResource("BoxShape3D_olrdv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.4, 0.5, -1.4000003)
shape = SubResource("BoxShape3D_rnj2d")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.4159667, 0.5, 0.4)
shape = SubResource("BoxShape3D_dngkx")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.584033, 0.5, 0.5)
shape = SubResource("BoxShape3D_m1sog")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.534033, 0.5, -1)
shape = SubResource("BoxShape3D_kmcul")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -0.015966773, 0.5, -2.8999999)
shape = SubResource("BoxShape3D_dby1b")

[node name="CollisionShape3D7" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0.48403323, 0.5, 1.6000001)
shape = SubResource("BoxShape3D_u7d2c")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.4340332, 0.5, -1.4000001)
shape = SubResource("BoxShape3D_rnj2d")

[connection signal="body_entered" from="Stairs" to="." method="_on_stairs_body_entered"]
[connection signal="body_entered" from="Stairs" to="Camera3D" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Stairs" to="Camera3D" method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="Room" to="." method="_on_room_body_entered"]
[connection signal="body_entered" from="Room" to="Camera3D" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Room" to="Camera3D" method="_on_area_3d_body_exited"]
